<resources>
    <string name="app_name">Notify: Notifications History</string>
    <string name="permissionTextFirst">This application will securely store all notifications you receive from the selected apps, allowing you to view them at your convenience.</string>
    <string name="permissionTextSecond">To enable this feature, please grant permission to access notifications on this device.</string>
    <string name="permissionTextThird">Tap the button below to open a new screen displaying all apps requesting this permission. Kindly locate Notify Vault and enable it as demonstrated in the image below.</string>
    <string name="welcomeFirstLine">Manage notifications smarter: track, restore, and access your history anytime.</string>
    <string name="welcomeSecondLine">Do not Missed</string>
    <string name="welcomeThirdLine">\u2022 Important deals</string>
    <string name="welcomeFourthLine">\u2022 Coupon code </string>
    <string name="welcomeFifthLine">\u2022 Messages</string>
    <string name="welcomeSixthLine">\u2022 News</string>
    <string name="welcomeSeventhLine">Catch them later with Notify. Stay organized and control which apps\' alerts you can store.</string>
    <string name="about_app">About App</string>
    <string name="notify_nnotification_history">Notify: \nNotification History</string>
    <string name="version_1_1_1">Version: 1.1.1</string>
    <string name="the_latest_version_is_already_updated">The Latest Version is Already Updated</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="notification_history_saver">Notification History Saver</string>
    <string name="allow_access">Allow Access</string>
    <string name="select_notification_apps">Select Notification Apps</string>
    <string name="select_all_apps">Select All Apps</string>
    <string name="save">Save</string>
    <string name="deleted_notifications">Deleted Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="hide_system_notifications">Hide System Notifications</string>
    <string name="the_system_notificstions_will_be_displayed">The system notificstions will be displayed</string>
    <string name="hide_duplicate_notifications">Hide Duplicate Notifications</string>
    <string name="duplicate_notification_will_save_here">Duplicate notification will save here</string>
    <string name="choose_application_for_notification">Choose Application For Notification</string>
    <string name="select_applications">Select Applications</string>
    <string name="todo">TODO</string>
    <string name="performance">Performance</string>
    <string name="auto_delete_older_notification">Auto Delete Older Notification</string>
    <string name="delete_all_notifications">Delete All Notifications</string>
    <string name="delete_all_notifications_free_up_space">Delete all notifications, free up space</string>
    <string name="recently_deleted_notification">Recently Deleted Notification</string>
    <string name="show_deleted_notification">Show Deleted Notification</string>
    <string name="legal">Legal</string>
    <string name="copyright_2024_white_owl_technology">Copyright © 2024 CodePati</string>
    <string name="notify_notification_history_1_5_0">Notify: Notification History (1.5.0)</string>
    <string name="save_nnotification">Save\nNotification</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_nnotify_notifications_history">Welcome to\nNotify: Notifications History!</string>
    <string name="acceptance_of_policies">Acceptance of policies</string>
    <string name="terms_and_conditions_agreement_checkbox">Terms and conditions agreement checkbox</string>
    <string name="terms_and_conditions_agreement_text">Terms and conditions agreement text</string>
    <string name="by_clicking_on_start_i_confirm_that_i_have_read_and_accept_the_terms_amp_conditions_and_the_privacy_policy"><![CDATA[By clicking on \"Start\" I confirm that I have read and accept the Terms & Conditions and the Privacy Policy.]]></string>
    <string name="start">Start</string>
    <string name="find_your_perfect_notifications">Find your perfect Notifications!</string>
    <string name="use_the_filter_button_to_view_only_notifications_from_a_specific_app_ot_rhose_received_within_a_time_range_or_combine_both_filter_at_the_same_time">Use the filter button to view only notifications from a specific app, ot rhose received within a time range; or combine both filter at the same time.</string>
    <string name="search_by_text">Search by Text</string>
    <string name="easily_find_notifications_by_entering_a_text_string_you_can_also_refine_your_search_by_combining_it_with_application_and_time_based_filters">Easily find notifications by entering a text string. You can also refine your search by combining it with application and time-based filters.</string>
    <string name="get_started">Get Started</string>
    <string name="never_delete">Never delete</string>
    <string name="delete_daily">Delete Daily</string>
    <string name="delete_older_than_1_week">Delete older than 1 week</string>
    <string name="delete_older_than_1_month">Delete older than 1 month</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="sss">sss</string>
    <string name="close">Close</string>
    <string name="scanning_for_media_files">Scanning for media files</string>
    <string name="harry_sent_you_a_request">harry sent you a request</string>
    <string name="_9_40">9:40</string>
    <string name="facebook">Facebook</string>
    <string name="filter_by_apps">Filter by Apps:</string>
    <string name="filter_by_date">Filter by date:</string>
    <string name="from">From:</string>
    <string name="until">Until:</string>
    <string name="delete_all">Delete All</string>
    <string name="restore_all">Restore All</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="app_language">App Language</string>
    <string name="change_app_language">Change App Language</string>
    <string name="english">English</string>
    <string name="support_share"><![CDATA[Support & share]]></string>
    <string name="nepali">Nepali</string>
    <string name="hindi">Hindi</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="share_our_app">Share Our App</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="portuguese">Portuguese</string>
    <string name="korean">Korean</string>
    <string name="choose_your_own_language">Choose Your Own Language</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_updated_successfully">App updated successfully!</string>
    <string name="app_update_failed_please_update_the_app_to_continue">App update failed! Please update the app to continue.</string>
    <string name="use_app_1">Tap the \"Get Started\" Button to get started.</string>
    <string name="use_app_2">Select the Desired app to store notifications.</string>
    <string name="use_app_3">Tap the “Allow Access”  button  to give  permission for the app to store the notification.</string>
    <string name="use_app_4">Enable Background Autostart for Notify: Notification History app to save notifications without interruption.</string>
    <string name="backup">Backup</string>
    <string name="backup_data">Backup Data</string>
    <string name="how_to_use_app">How to Use App</string>
    <string name="security">Security</string>
    <string name="add_pin_lock">Add Pin Lock</string>
</resources>