<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".WelcomeThird">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_150sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search_next" />

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/_8sdp"
        android:textStyle="bold"
        android:padding="@dimen/_6sdp"
        android:text="@string/search_by_text"
        android:textAlignment="center"
        android:textColor="@color/special"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easily_find_notifications_by_entering_a_text_string_you_can_also_refine_your_search_by_combining_it_with_application_and_time_based_filters"
        android:fontFamily="@font/roboto"
        android:padding="@dimen/_6sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/paragraphHeadingText"
        app:layout_constraintEnd_toEndOf="@+id/textViewHeading"
        app:layout_constraintStart_toStartOf="@+id/textViewHeading"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeading" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGetStarted"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/get_started"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/custom_svae"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/_16ssp"
        android:textAllCaps="false"
        android:letterSpacing=".05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubHeading" />
</androidx.constraintlayout.widget.ConstraintLayout>